src/objects/SPE_ScorecardTemplate__c.object
<CustomObject>
    <fields>
        <fullName>BusinessLine__c</fullName>
        <label>Business Line</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BusinessUnit__c</fullName>
        <label>Business Unit</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CategoryCluster__c</fullName>
        <label>Category Area</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CategoryGroup__c</fullName>
        <label>Category Group</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KPIDefinition__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>KPI Definition</label>
        <referenceTo>SPE_KPIDefinition__c</referenceTo>
        <relationshipLabel>Scorecard Templates</relationshipLabel>
        <relationshipName>Scorecard_Templates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Organization_Group__c</fullName>
        <inlineHelpText>Relevant org/group for this data</inlineHelpText>
        <label>Organization/Group</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product1__c</fullName>
        <label>Product1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product2__c</fullName>
        <label>Product2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product3__c</fullName>
        <label>Product3</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <picklist>
            <picklistValues>
                <fullName>All Project</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>AF AWCC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AMC 2G</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AL VODAFONE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AL M4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AL PLUS Care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DZ Ooredoo Algeria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DZ.Orascom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Algeria Telecom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CTi Movil ARG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Telefonica Panama</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR CTi Movil 3G</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR Cablevision NGN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR Telecom Personal 3G</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR Telecom PDH/SDH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR Claro Argentina SWAP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR TECO TDM Evolution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nextel Argentina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AM Orange</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Optus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vodafone Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AU DoT DTRS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AU NBN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AT H3G Old</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AT Netco</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AT Caldera</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AT TMA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AT H3G</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AT A1 Austria Care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AT Orange Austria Care</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Market</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ScorecardTemplateId__c</fullName>
        <displayFormat>STMP-{000000}</displayFormat>
        <label>Scorecard Template Id</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Scorecard_Template_Id_Formula__c</fullName>
        <formula>HYPERLINK(&apos;/&apos;+Id, ScorecardTemplateId__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Scorecard Template Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <inlineHelpText>See SPE Process Guidelines</inlineHelpText>
        <label>Stage</label>
        <picklist>
            <picklistValues>
                <fullName>Draft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Published</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Obsolete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pilot</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SubRegion__c</fullName>
        <label>Market Unit</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Domain</label>
        <picklist>
            <picklistValues>
                <fullName>Operational</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Strategic</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>isAdhoc__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isAdhoc?</label>
        <type>Checkbox</type>
    </fields>
    <label>Scorecard Template</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Scorecard_Template_Id_Formula__c</columns>
        <columns>NAME</columns>
        <columns>Stage__c</columns>
        <columns>BusinessLine__c</columns>
        <columns>BusinessUnit__c</columns>
        <columns>Category__c</columns>
        <columns>CategoryCluster__c</columns>
        <columns>CategoryGroup__c</columns>
        <columns>Country__c</columns>
        <columns>isAdhoc__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Scorecard Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Scorecard Templates</pluralLabel>
    <recordTypes>
        <fullName>Draft</fullName>
        <active>true</active>
        <label>Draft</label>
    </recordTypes>
    <recordTypes>
        <fullName>Obsolete</fullName>
        <active>true</active>
        <label>Obsolete</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>SPE_StageValidation_Scorecard</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISPICKVAL(PRIORVALUE(Stage__c),&quot;Obsolete&quot;),OR( ISPICKVAL(Stage__c,&quot;Published&quot;),ISPICKVAL(Stage__c,&quot;Draft&quot;)))</errorConditionFormula>
        <errorMessage>The Life-cycle stage value cannot be changed from &apos;Obsolete&apos; stage value.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SPE_StatusRestriction_Scorecard</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISNEW(), OR(ISPICKVAL(Stage__c,&quot;Published&quot;), 
ISPICKVAL(Stage__c,&quot;Obsolete&quot;) ))</errorConditionFormula>
        <errorDisplayField>Stage__c</errorDisplayField>
        <errorMessage>Lifecycle Stage must be Draft</errorMessage>
    </validationRules>
</CustomObject>